@@ -347,6 +347,66 @@ operator|)
 return|;
 block|}
 block|}
+DECL|field|INT_PARSER
+specifier|private
+specifier|static
+specifier|final
+name|IntParser
+name|INT_PARSER
+init|=
+operator|new
+name|IntParser
+argument_list|()
+block|{
+specifier|public
+name|int
+name|parseInt
+parameter_list|(
+name|String
+name|value
+parameter_list|)
+block|{
+return|return
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|value
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
+DECL|field|FLOAT_PARSER
+specifier|private
+specifier|static
+specifier|final
+name|FloatParser
+name|FLOAT_PARSER
+init|=
+operator|new
+name|FloatParser
+argument_list|()
+block|{
+specifier|public
+name|float
+name|parseFloat
+parameter_list|(
+name|String
+name|value
+parameter_list|)
+block|{
+return|return
+name|Float
+operator|.
+name|parseFloat
+argument_list|(
+name|value
+argument_list|)
+return|;
+block|}
+block|}
+decl_stmt|;
 comment|/** The internal cache. Maps Entry to array of interpreted term values. **/
 DECL|field|cache
 specifier|final
@@ -663,6 +723,36 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+return|return
+name|getInts
+argument_list|(
+name|reader
+argument_list|,
+name|field
+argument_list|,
+name|INT_PARSER
+argument_list|)
+return|;
+block|}
+comment|// inherit javadocs
+DECL|method|getInts
+specifier|public
+name|int
+index|[]
+name|getInts
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|,
+name|String
+name|field
+parameter_list|,
+name|IntParser
+name|parser
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|field
 operator|=
 name|field
@@ -679,9 +769,7 @@ name|reader
 argument_list|,
 name|field
 argument_list|,
-name|SortField
-operator|.
-name|INT
+name|parser
 argument_list|)
 decl_stmt|;
 if|if
@@ -849,9 +937,7 @@ name|reader
 argument_list|,
 name|field
 argument_list|,
-name|SortField
-operator|.
-name|INT
+name|parser
 argument_list|,
 name|retArray
 argument_list|)
@@ -884,6 +970,36 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+return|return
+name|getFloats
+argument_list|(
+name|reader
+argument_list|,
+name|field
+argument_list|,
+name|FLOAT_PARSER
+argument_list|)
+return|;
+block|}
+comment|// inherit javadocs
+DECL|method|getFloats
+specifier|public
+name|float
+index|[]
+name|getFloats
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|,
+name|String
+name|field
+parameter_list|,
+name|FloatParser
+name|parser
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|field
 operator|=
 name|field
@@ -900,9 +1016,7 @@ name|reader
 argument_list|,
 name|field
 argument_list|,
-name|SortField
-operator|.
-name|FLOAT
+name|parser
 argument_list|)
 decl_stmt|;
 if|if
@@ -1070,9 +1184,7 @@ name|reader
 argument_list|,
 name|field
 argument_list|,
-name|SortField
-operator|.
-name|FLOAT
+name|parser
 argument_list|,
 name|retArray
 argument_list|)
@@ -2078,9 +2190,7 @@ name|reader
 argument_list|,
 name|field
 argument_list|,
-name|SortField
-operator|.
-name|CUSTOM
+name|comparator
 argument_list|,
 name|retArray
 argument_list|)
